@@ -1,25 +1,26 @@
 package ecomarket.catalogo.service;
 
-import ecomarket.catalogo.model.Catalogo;
-import ecomarket.catalogo.repository.CatalogoRepository;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
+import java.time.LocalDate;
+import java.util.List;
+import java.util.Optional;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.time.LocalDate;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
-
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
+import ecomarket.catalogo.model.Catalogo;
+import ecomarket.catalogo.repository.CatalogoRepository;
 
 @ExtendWith(MockitoExtension.class)
-class CatalogoServiceTest {
+public class CatalogoServiceTest {
 
     @Mock
     private CatalogoRepository catalogoRepository;
@@ -27,109 +28,69 @@ class CatalogoServiceTest {
     @InjectMocks
     private CatalogoService catalogoService;
 
-    private Catalogo crearCatalogo(Long id, String nombre, LocalDate fecha) {
-        Catalogo catalogo = new Catalogo();
-        catalogo.setIdCatalogo(id);
-        catalogo.setNombreCatalogo(nombre);
-        catalogo.setFechaActualizacion(fecha);
-        return catalogo;
+    private Catalogo catalogo(Long id, String nombre, LocalDate fecha) {
+        Catalogo c = new Catalogo();
+        c.setIdCatalogo(id);
+        c.setNombreCatalogo(nombre);
+        c.setFechaActualizacion(fecha);
+        return c;
     }
 
     @Test
     void testCrearCatalogo() {
-        Catalogo catalogo = crearCatalogo(null, "Catalogo Verano", LocalDate.now());
-        Catalogo guardado = crearCatalogo(1L, "Catalogo Verano", LocalDate.now());
-
-        when(catalogoRepository.save(catalogo)).thenReturn(guardado);
-
-        Catalogo resultado = catalogoService.crearCatalogo(catalogo);
-
-        assertNotNull(resultado);
-        assertEquals(1L, resultado.getIdCatalogo());
-        assertEquals("Catalogo Verano", resultado.getNombreCatalogo());
-
-        verify(catalogoRepository, times(1)).save(catalogo);
+        Catalogo nuevo = catalogo(null, "Catalogo Verano", LocalDate.of(2026, 1, 1));
+        Catalogo guardado = catalogo(1L, "Catalogo Verano", LocalDate.of(2026, 1, 1));
+        when(catalogoRepository.save(nuevo)).thenReturn(guardado);
+        Catalogo resultado = catalogoService.crearCatalogo(nuevo);
+        assertThat(resultado.getIdCatalogo()).isEqualTo(1L);
+        assertThat(resultado.getNombreCatalogo()).isEqualTo("Catalogo Verano");
+        verify(catalogoRepository).save(nuevo);
     }
 
     @Test
     void testListarCatalogo() {
-        Catalogo c1 = crearCatalogo(1L, "Catalogo Verano", LocalDate.now());
-        Catalogo c2 = crearCatalogo(2L, "Catalogo Invierno", LocalDate.now());
-
-        when(catalogoRepository.findAll()).thenReturn(Arrays.asList(c1, c2));
-
-        List<Catalogo> resultado = catalogoService.listarCatalogo();
-
-        assertEquals(2, resultado.size());
-        assertEquals("Catalogo Verano", resultado.get(0).getNombreCatalogo());
-        assertEquals("Catalogo Invierno", resultado.get(1).getNombreCatalogo());
-
-        verify(catalogoRepository, times(1)).findAll();
+        when(catalogoRepository.findAll())
+                .thenReturn(List.of(catalogo(1L, "Catalogo Verano", LocalDate.now())));
+        assertThat(catalogoService.listarCatalogo()).hasSize(1);
+        verify(catalogoRepository).findAll();
     }
 
     @Test
-    void testFindByIdExistente() {
-        Catalogo catalogo = crearCatalogo(1L, "Catalogo Verano", LocalDate.now());
-
-        when(catalogoRepository.findById(1L)).thenReturn(Optional.of(catalogo));
-
-        Optional<Catalogo> resultado = catalogoService.findById(1L);
-
-        assertTrue(resultado.isPresent());
-        assertEquals(1L, resultado.get().getIdCatalogo());
-
-        verify(catalogoRepository, times(1)).findById(1L);
+    void testFindById() {
+        when(catalogoRepository.findById(1L))
+                .thenReturn(Optional.of(catalogo(1L, "Catalogo Verano", LocalDate.now())));
+        assertThat(catalogoService.findById(1L)).isPresent();
+        assertThat(catalogoService.findById(1L).get().getNombreCatalogo()).isEqualTo("Catalogo Verano");
     }
 
     @Test
-    void testFindByIdNoExistente() {
+    void testFindByIdInexistente() {
         when(catalogoRepository.findById(99L)).thenReturn(Optional.empty());
-
-        Optional<Catalogo> resultado = catalogoService.findById(99L);
-
-        assertFalse(resultado.isPresent());
-
-        verify(catalogoRepository, times(1)).findById(99L);
+        assertThat(catalogoService.findById(99L)).isEmpty();
     }
 
     @Test
-    void testActualizarCatalogoExistente() {
-        Catalogo existente = crearCatalogo(1L, "Catalogo Verano", LocalDate.of(2025, 1, 1));
-        Catalogo datos = crearCatalogo(null, "Catalogo Otono", LocalDate.of(2025, 6, 1));
-
+    void testActualizarCatalogoOk() {
+        Catalogo existente = catalogo(1L, "Viejo", LocalDate.of(2025, 1, 1));
+        Catalogo datos = catalogo(null, "Nuevo", LocalDate.of(2026, 6, 1));
         when(catalogoRepository.findById(1L)).thenReturn(Optional.of(existente));
-        when(catalogoRepository.save(existente)).thenReturn(existente);
-
+        when(catalogoRepository.save(any(Catalogo.class))).thenAnswer(inv -> inv.getArgument(0));
         Catalogo resultado = catalogoService.actualizarCatalogo(1L, datos);
-
-        assertNotNull(resultado);
-        assertEquals("Catalogo Otono", resultado.getNombreCatalogo());
-        assertEquals(LocalDate.of(2025, 6, 1), resultado.getFechaActualizacion());
-
-        verify(catalogoRepository, times(1)).findById(1L);
-        verify(catalogoRepository, times(1)).save(existente);
+        assertThat(resultado.getNombreCatalogo()).isEqualTo("Nuevo");
+        assertThat(resultado.getFechaActualizacion()).isEqualTo(LocalDate.of(2026, 6, 1));
+        verify(catalogoRepository).save(existente);
     }
 
     @Test
-    void testActualizarCatalogoNoExistente() {
-        Catalogo datos = crearCatalogo(null, "Catalogo Otono", LocalDate.now());
-
+    void testActualizarCatalogoInexistente() {
         when(catalogoRepository.findById(99L)).thenReturn(Optional.empty());
-
-        Catalogo resultado = catalogoService.actualizarCatalogo(99L, datos);
-
-        assertNull(resultado);
-
-        verify(catalogoRepository, times(1)).findById(99L);
+        assertThat(catalogoService.actualizarCatalogo(99L, new Catalogo())).isNull();
         verify(catalogoRepository, never()).save(any(Catalogo.class));
     }
 
     @Test
     void testEliminarCatalogo() {
-        doNothing().when(catalogoRepository).deleteById(1L);
-
         catalogoService.eliminarCatalogo(1L);
-
-        verify(catalogoRepository, times(1)).deleteById(1L);
+        verify(catalogoRepository).deleteById(1L);
     }
 }
